# llm-wiki

./: .env.example  .gitignore  CHANGELOG.md  README.md  config.toml.example  pyproject.toml  start.command
app/: config.py  logging_setup.py  main.py
app/api/: chat.py  ingest.py  wiki.py
app/core/: compiler.py  file_ops.py  ingest_service.py  lint.py  query_engine.py  snapshot.py
app/ingestors/: base.py  markdown.py  pdf.py  text.py  url.py
app/llm/: base.py  claude.py  ollama.py  router.py  tools.py
app/schemas/: models.py
app/schemas/templates/: blank.md  coding-knowledge.md  research-notes.md
app/web/: app.js  index.html  style.css
tests/: test_compiler.py  test_e2e.py  test_file_ops.py  test_providers.py
