[project]
name = "personal-llm-wiki"
version = "0.1.0"
description = "Local-first personal knowledge base powered by LLM compilation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "anthropic>=0.52.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "structlog>=24.4.0",
    "gitpython>=3.1.0",
    "apscheduler>=3.10.0",
    "trafilatura>=2.0.0",
    "pymupdf>=1.25.0",
    "python-multipart>=0.0.18",
    "websockets>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
